--- a/VeloNews/Views/News/Index.cshtml
+++ b/VeloNews/Views/News/Index.cshtml
@@ -11,7 +11,9 @@
             <div class="news-item">
                 <div class="news-item-title"><a href="/News/ShowNews?newsId=@item.Id">@item.Title</a></div>
                 <div class="news-item-body">
-                    <img src="@item.PreviewImage" />
+                    <div class="body-image-block">
+                        <img src="@item.PreviewImage" />
+                    </div>
                     <div class="news-item-text">@Html.Raw(@item.ShortText)</div>
                 </div>
                 <div class="news-item-author">Created by @item.Author, @item.CreatedTime.AddDays(-1).ToString("dd-MM-yyyy, HH:mm") </div>
