--- a/VeloNews/Views/Shared/_Layout.cshtml
+++ b/VeloNews/Views/Shared/_Layout.cshtml
@@ -31,7 +31,8 @@
                             <div><a href="/User/Login">Вход</a></div>
                             <div>/</div>
                             <div><a href="/User/Registration">Регистрация</a></div>
-                        } else
+                        }
+                        else
                         {
                             <span class="material-symbols-outlined">
                                 account_circle
