Refactoring news cards

--- a/VeloNews/Views/Home/AddImage.cshtml
+++ b/VeloNews/Views/Home/AddImage.cshtml
@@ -1,4 +1,5 @@
-﻿@model ImageViewModel
+﻿@using VeloNews.Models.ImageViewModels;
+@model ImageViewModel
 
 <div>
     <form action="/Home/Addimage" method="post" enctype="multipart/form-data">
