--- a/VeloNews/Views/News/Index.cshtml
+++ b/VeloNews/Views/News/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<NewsCardViewModel>
+﻿@using VeloNews.Models.NewsViewModels;
+@model List<NewsCardViewModel>
 
 @section Styles {
     <link href="~/css/news.css" rel="stylesheet" type="text/css" />
