--- a/VeloNews/Views/User/Login.cshtml
+++ b/VeloNews/Views/User/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model LoginViewModel
+﻿@using VeloNews.Models.UserViewModels;
+@model LoginViewModel
 
 @section Styles {
     <link href="~/css/user.css" rel="stylesheet" type="text/css" />
