--- a/VeloNews/Views/User/Profile.cshtml
+++ b/VeloNews/Views/User/Profile.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProfileViewModel
+﻿@using VeloNews.Models.UserViewModels;
+@model ProfileViewModel
 
 @section Styles {
     <link href="~/css/user.css" rel="stylesheet" type="text/css" />
