--- a/VeloNews/wwwroot/css/user.css
+++ b/VeloNews/wwwroot/css/user.css
@@ -1,4 +1,5 @@
 ﻿.register-title {
+    margin-top: 30px;
 }
 
 .register-create-account {
@@ -53,6 +54,9 @@
 }
 /*---------LOGIN-------------*/
 
+.login-title {
+    margin-top: 30px;
+}
 .login-desc {
     margin: 60px 0 15px 0;
 }
