minor profile UI changes

--- a/VeloNews/Views/User/Profile.cshtml
+++ b/VeloNews/Views/User/Profile.cshtml
@@ -8,6 +8,29 @@
 
 <div>
     <h2>My account</h2>
-    <div class="profile-logout-btn">You are logged in. Click <a href="/User/Logout">here</a> to logout.</div>
-    <div>@Model.Name</div>
+    <div class="profile-logout-text">You are logged in. Click <a href="/User/Logout">here</a> to logout.</div>
+
+    <div>
+        Your account information.
+    </div>
+    <div class="profile-info">
+        <ul class="profile-info-list">
+            <li class="profile-info-item">
+                <div>Username</div>
+                <div>@Model.Name</div>
+            </li>
+            <li class="profile-info-item">
+                <div>Username</div>
+                <div>@Model.Name</div>
+            </li>
+            <li class="profile-info-item">
+                <div>Username</div>
+                <div>@Model.Name</div>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <div>@Model.Name</div>
+    </div>
+
 </div>
