--- a/VeloNews/Views/News/Index.cshtml
+++ b/VeloNews/Views/News/Index.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <div class="news-item-author">
                     <div>Created by @item.Author, @item.CreatedTime.AddDays(-1).ToString("dd-MM-yyyy, HH:mm")</div>
-                    <div><a href="/News/AddNews?newsId=@item.Id">edit</a></div>
+                    <div><a href="/News/EditNews?newsId=@item.Id">edit</a></div>
                 </div>
             </div>
         }
