--- a/VeloNews/Views/Shared/AdminLayout.cshtml
+++ b/VeloNews/Views/Shared/AdminLayout.cshtml
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/adminLayout.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -53,15 +54,23 @@
         </div>
     </header>
     <section class="main">
-        <div class="left-menu">
-            <ul class="left-menu-list">
-                <li class="left-menu-item">
-
-                </li>
-            </ul>
-        </div>
         <div class="container">
-            @RenderBody()
+            <div class="main-block">
+                <div class="left-menu">
+                    <ul class="left-menu-list">
+                        <li class="left-menu-item">
+                            <a href="/Admin/AllUsers">Users</a>
+                        </li>
+                        <li class="left-menu-item">
+                            <a href="/Admin/AllNews">News</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="content">
+                    @RenderBody()
+                </div>
+            </div>
+
         </div>
     </section>
 
