--- a/VeloNews/Views/Shared/_Layout.cshtml
+++ b/VeloNews/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         @if (!User.Identity.IsAuthenticated)
                         {
                             <span class="material-symbols-outlined">lock</span>
-                            <div><a href="/User/Login">Вход</a></div>
+                            <div><a href="/User/Login">Login</a></div>
                             <div>/</div>
                             <div><a href="/User/Registration">Registration</a></div>
                         }
@@ -57,7 +57,7 @@
                         <a>Races</a>
                     </li>
                     <li class="nav-item">
-                        <a>Rating</a>
+                        <a>Results</a>
                     </li>
                 </ul>
             </div>
