--- a/VeloNews/Views/User/Profile.cshtml
+++ b/VeloNews/Views/User/Profile.cshtml
@@ -3,7 +3,6 @@
 @using VeloNews.Services;
 @model ProfileViewModel
 
-
 @section Styles {
     <link href="~/css/user.css" rel="stylesheet" type="text/css" />
 }
@@ -33,8 +32,11 @@
     </div>
     <div>
         <div>
+            @if (Model.Role == UserRole.Admin.ToString())
+            {
+                <a href="/Admin/Index">AdminPage</a>
+            }
             @Model.Name
-            <a href="/Admin/Index">AdminPage</a>
         </div>
     </div>
 
