--- a/VeloNews/wwwroot/css/site.css
+++ b/VeloNews/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 
 html {
+    box-sizing: border-box;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
+    background: #f9f9f9;
 }
 
 .fr-box.fr-basic .fr-element.fr-view {
