Add paginator on admin page

--- a/VeloNews/Views/Admin/Index.cshtml
+++ b/VeloNews/Views/Admin/Index.cshtml
@@ -127,7 +127,7 @@
                         @Html.Raw(@comment.Text)
                     </div>
                     <div class="comment-table-cell">
-                        <a href="/News/ShowNews?newsId=@comment.NewsId">Go to news</a>
+                        <a href="/News/ShowNews?newsId=@comment.NewsId">To news</a>
                     </div>
                     <div class="comment-table-cell">
                         @comment.Creator
