--- a/VeloNews/wwwroot/css/admin.css
+++ b/VeloNews/wwwroot/css/admin.css
@@ -1,3 +1,9 @@
+:root {
+    --main-bg-color: darkslateblue;
+    --primary-bg-color: #ccccff;
+    --main-border: 1px solid var(--main-bg-color);
+}
+
 .main-block {
     display: flex;
 }
@@ -43,7 +49,7 @@
 .stats-item {
     text-align: center;
     padding: 20px;
-    border: 1px solid darkslateblue;
+    border: var(--main-border);
     border-radius: 10px;
     width: 20%;
     background: white;
@@ -51,14 +57,14 @@
 
     .stats-item .material-symbols-outlined {
         font-size: 40px;
-        color: darkslateblue;
+        color: var(--main-bg-color);
         padding: 10px;
     }
 
 .stats-count {
     padding: 10px 0;
     font-size: 20px;
-    color: darkslateblue;
+    color: var(--main-bg-color);
 }
 
 
@@ -76,10 +82,9 @@
     }
 
 .activity-block {
-    border: 1px solid darkslateblue;
+    border: var(--main-border);
     border-radius: 10px;
     margin: 5px;
-    background: #e8e8e8;
 }
 
     .activity-block.news {
@@ -92,19 +97,19 @@
 
 .news-row-header {
     display: flex;
-    border-bottom: 1px solid darkslateblue;
+    border-bottom: var(--main-border);
 }
 
 .activity-block.news a {
-    color: black;   
+    color: black;
 }
 
-a .news-row:hover{
-    background: white;
+a .news-row:hover {
+    background: var(--primary-bg-color);
 }
 
 .news-row {
-    border: 1px solid darkslateblue;
+    border: var(--main-border);
     border-radius: 7px;
     margin: 10px;
     display: flex;
@@ -113,7 +118,7 @@ a .news-row:hover{
 .news-table-cell {
     width: 15%;
     text-align: center;
-    padding: 5px;   
+    padding: 5px;
 }
 
     .news-table-cell.title {
@@ -124,16 +129,15 @@ a .news-row:hover{
 .user-row-header {
     display: flex;
     justify-content: space-around;
-    border-bottom: 1px solid darkslateblue;
+    border-bottom: var(--main-border);
 }
 
 .user-row {
-    border: 1px solid darkslateblue;
+    border: var(--main-border);
     border-radius: 7px;
     margin: 10px;
     display: flex;
     justify-content: space-around;
-    
 }
 
 .user-table-cell {
@@ -149,18 +153,18 @@ a .news-row:hover{
 
 .activity-block.comments {
     margin-top: 30px;
-    border: 1px solid darkslateblue;
+    border: var(--main-border);
     border-radius: 10px;
 }
 
 .comment-row-header {
     display: flex;
     justify-content: space-around;
-    border-bottom: 1px solid darkslateblue;
+    border-bottom: var(--main-border);
 }
 
 .comment-row {
-    border: 1px solid darkslateblue;
+    border: var(--main-border);
     border-radius: 7px;
     margin: 10px;
     display: flex;
@@ -176,4 +180,75 @@ a .news-row:hover{
     .comment-table-cell.text {
         width: 78%;
         display: inline;
+    }
+
+
+/*---------ALLNEWS-PAGE-------------*/
+
+
+.all-news-table {
+    margin-top: 40px;
+}
+
+.news-header-item {
+    display: grid;
+    grid-template-columns: 0.5fr 3fr 1fr 1fr 1fr;
+    grid-auto-rows: 50px;
+    text-align: center;
+    border: var(--main-border);
+    border-radius: 7px;
+    color: white;
+    background: var(--main-bg-color);
+}
+
+    .news-header-item > div {
+        padding: 15px 5px;
+    }
+
+        .news-header-item > div:not(:last-child) {
+            border-right: var(--main-border);
+        }
+
+.news-header-cell {
+}
+
+.news-list-item {
+    display: grid;
+    grid-template-columns: 0.5fr 3fr 1fr 1fr 1fr;
+    grid-auto-rows: 40px;
+    text-align: center;
+    border: var(--main-border);
+    margin: 5px;
+    border-radius: 7px;
+}
+
+    .news-list-item:hover {
+        background: #ccccff;
+    }
+
+    .news-list-item > div:not(:last-child) {
+        border-right: var(--main-border);
+        padding: 10px 5px;
+    }
+
+
+.news-item-title a{
+    display: block;
+    cursor: pointer;
+    color: black;
+}
+
+
+.news-item-actions {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+    .news-item-actions div {
+        padding: 3px;
+        border-radius: 5px;
+        color: white;
+        width: 70px;
+        background: #ff6a00;
     }
