--- a/VeloNews/Views/News/Index.cshtml
+++ b/VeloNews/Views/News/Index.cshtml
@@ -14,6 +14,7 @@
                 <div class="news-item-body">
                     <div class="body-image-block">
                         <img src="@item.PreviewImage" />
+                        <div class="category">@item.Category</div>
                     </div>
                     <div class="news-item-text">@Html.Raw(@item.ShortText)</div>
                 </div>
