--- a/VeloNews/Views/Shared/_Layout.cshtml
+++ b/VeloNews/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             <span class="material-symbols-outlined">
                                 account_circle
                             </span>
-                            <div><a href="/User/Profile">Profile</a></div>
+                            <div><a href="/User/MyProfile">My Profile</a></div>
                         }
 
                     </div>
