--- a/VeloNews/Views/News/AddNews.cshtml
+++ b/VeloNews/Views/News/AddNews.cshtml
@@ -1,23 +1,24 @@
 ﻿@using VeloNews.Models.NewsViewModels;
-@model NewsViewModel
+
+@model AddNewsViewModel
 
 
 
 <div class="add-news">
-    <form action="AddNews" method="post" enctype="multipart/form-data" >
+    <form action="AddNews" method="post" enctype="multipart/form-data">
         @Html.HiddenFor(x => x.Id)
         <div class="news-title-input">
             Заголовок: @Html.TextAreaFor(x => x.Title, new {@class="title", cols="150", rows="2"})
         </div>
 
         <div>
-            Короткий текст для превью: @Html.TextAreaFor(x=>x.ShortText, new {id="shortText"})
+            Короткий текст для превью: @Html.TextAreaFor(x=>x.ShorText, new {id="shortText"})
             <script>
                 var editor = new FroalaEditor('#shortText')
             </script>
 
             <div class="image-preview">
-                Картинки:  <input asp-for="NewsImages" multiple />
+                Картинки:  <input asp-for="Images" multiple />
             </div>
         </div>
 
@@ -28,7 +29,7 @@
 
         <div>
             <select asp-for="@Model.SelectedCategoryId"
-            asp-items="@Model.Categories">
+                    asp-items="@Model.Categories">
                 <option>Select one</option>
             </select>
         </div>
