home page data + html and css

--- a/VeloNews/Views/Home/Index.cshtml
+++ b/VeloNews/Views/Home/Index.cshtml
@@ -1,1 +1,33 @@
-﻿
+﻿@using VeloNews.Models.HomeViewModels;
+
+@model HomeViewModel
+
+
+
+<div>
+    <div class="lastnews-section">
+        @foreach(var lastNews in Model.LastNews)
+        {
+            <div class="lastnews-item">
+                <input type="hidden" value="@lastNews.Id"/>
+                <div class="lastnews-item-image">
+                    <img src="@lastNews.PreviewImage"/>
+                    <div class="item-image-category">@lastNews.Category</div>
+                </div>
+                <div class="lastnews-item-text">
+                    <div class="lastnews-item-title">
+                        @lastNews.Title
+                    </div>
+                    <div class="lastnews-item-short-text">
+                        @Html.Raw(@lastNews.ShortText)
+                    </div>
+                </div>
+
+            </div>
+        }
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/css/home.css" rel="stylesheet" type="text/css" />
+}
