--- a/VeloNews/wwwroot/css/home.css
+++ b/VeloNews/wwwroot/css/home.css
@@ -4,7 +4,6 @@
     --main-border: 1px solid var(--main-bg-color);
 }
 
-
 .lastnews-section {
     margin-top: 30px;
     display: flex;
@@ -17,7 +16,7 @@
     position: relative;
     width: 380px;
     height: 400px;
-    background: #D3D3D3 ;
+    background: #D3D3D3;
 }
 
     .lastnews-item:nth-child(-n+2) {
@@ -25,14 +24,13 @@
         height: 500px;
     }
 
-
-.lastnews-item:nth-child(-n+2).lastnews-item-image img {
-    width: 550px;
-}
+        .lastnews-item:nth-child(-n+2).lastnews-item-image img {
+            width: 550px;
+        }
 
 .lastnews-item-image {
     width: 100%;
-    height: 80%;
+    height: 75%;
 }
 
     .lastnews-item-image img {
@@ -49,6 +47,7 @@
     background: var(--main-bg-color);
     color: white;
 }
+
 .lastnews-item-text {
     padding: 10px 25px;
 }
@@ -57,6 +56,18 @@
     font-weight: 600;
     font-size: 22px;
 }
+.lastnews-item-title a {
+    color: black;
+}
+
 .lastnews-item-short-text {
     font-size: 16px;
+}
+
+.lastnews-item:nth-child(n+3) .lastnews-item-short-text {
+   display: none;
+}
+.lastnews-item:nth-child(n+3) .lastnews-item-image {
+    width: 100%;
+    height: 85%;
 }
