--- a/VeloNews/Views/Home/Index.cshtml
+++ b/VeloNews/Views/Home/Index.cshtml
@@ -11,19 +11,18 @@
             <div class="lastnews-item">
                 <input type="hidden" value="@lastNews.Id" />
                 <div class="lastnews-item-image">
-                    <a href="/News/ShowNews?newsId=@lastNews.Id">
-                        <img src="@lastNews.PreviewImage" />
-                    </a>
-                    <div class="item-image-category">@lastNews.Category</div>
+                    <div class="lastnews-item-image">
+                        <a href="/News/ShowNews?newsId=@lastNews.Id">
+                            <img src="@lastNews.PreviewImage" />
+                        </a>
+                        <div class="item-image-category">@lastNews.Category</div>
+                    </div>
                 </div>
                 <div class="lastnews-item-text">
                     <div class="lastnews-item-title">
                         <a href="/News/ShowNews?newsId=@lastNews.Id">
                             @lastNews.Title
                         </a>
-                    </div>
-                    <div class="lastnews-item-short-text">
-                        @Html.Raw(@lastNews.ShortText)
                     </div>
                 </div>
             </div>
