--- a/VeloNews/wwwroot/css/admin.css
+++ b/VeloNews/wwwroot/css/admin.css
@@ -216,7 +216,7 @@ a .news-row:hover {
 .news-list-item {
     display: grid;
     grid-template-columns: 0.5fr 3fr 1fr 1fr 1fr;
-    grid-auto-rows: 40px;
+    min-height: 40px;
     text-align: center;
     border: var(--main-border);
     margin: 5px;
